# Zero2Prod

./: Cargo.toml  Dockerfile  README.md
configuration/: base.yaml  production.yaml
migrations/: 20221212135735_create_subscriptions_table.sql  20230118180214_make_status_not_null_in_subscriptions.sql  20230119222506_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  database_helper.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: post.rs
tests/api/: health_check.rs  helpers.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
