[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Davide Di Maria"] 
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
serde = { version = "1.0.149", features = ["derive"]}
serde-aux = "3"
config = "0.13"
chrono = { version = "0.4.23", default-features = false, feautures = ["clock"] }
uuid = { version = "1.2.2", features = ["v4"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.6"
tracing-log = "0.1"
tracing-subscriber = {version = "0.3.16", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
secrecy = {version = "0.8", features = ["serde"]}

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
once_cell = "1"
