[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Davide Di Maria"] 
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.23", default-features = false, feautures = ["clock"] }
claim = "0.5"
config = "0.13"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.149", features = ["derive"] }
serde-aux = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.6"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
unicode-segmentation = "1.7.1"
uuid = { version = "1.2.2", features = ["v4"] }
url = { version = "2.2.0", features = ["serde"] }
validator = { version = "0.12", features = ["derive"] }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
once_cell = "1"
fake = "2.5.0"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5"
